Added results, part report Janno and the how to integrate appendix

--- a/043-partners.tex
+++ b/043-partners.tex
@@ -5,7 +5,8 @@
 \rowcolor[gray]{0.8}
 \bf Short Name & \bf Contribution\\
 \hline
-\bf PNS
-	& Partner contribution\\
+\bf TU/e & Implementation of a Whole Body Controller\\
 \hline
 \end{longtable}
+
+Do we have other partners?
