--- a/main.tex
+++ b/main.tex
@@ -49,4 +49,7 @@
 \include{04-intro}
 \include{05-mainmatter}
 
+%\cleardoublepage	% To correct ToC entry for bibliography
+\bibliography{references}
+
 \end{document}
